Training for handlebars complete
-Create Books resources and able to render/clear templates upon API
request.

--- a/assets/scripts/templates/book-listing.handlebars
+++ b/assets/scripts/templates/book-listing.handlebars
@@ -1,17 +1,4 @@
-  {{#each books}}
-
-<!-- {{> partial}}
-Don't uncomment yet -->
-
-
-
-    <h1> <small>Title: {{title}}</small></h1>
-    <div>
-      {{#if desc}}
-        {{desc}}
-      {{else}}
-        No description.
-      {{/if}}
-    </div>
-
-  {{/each}}
+<h1> Books: </h1>
+{{#each books}}
+  {{> partial}}
+{{/each}}
