--- a/assets/scripts/templates/partial.handlebars
+++ b/assets/scripts/templates/partial.handlebars
@@ -1,1 +1,7 @@
-<br>I'm a partial that is included every <big><i>books</i></big> iteration
+<h3>{{title}}</h3>
+
+{{#if desc}}
+  <p>{{desc}}</p>
+{{else}}
+  <p> No Description </p>
+{{/if}}
