--- a/assets/scripts/templates/partial.handlebars
+++ b/assets/scripts/templates/partial.handlebars
@@ -1,1 +1,1 @@
-<br>I'm a partial that is included every <big><i>books</i></big> iteration
+<br>I'm a partial that is included in every <big><i>books</i></big> iteration
