Add data-id to button
Renders `book.id` as an attribute called `data-id` in the DOM for
each button. Then pulls that data-id attribute out of the DOM element
using `event.target` to use for the ajax request.

--- a/assets/scripts/templates/book-listing.handlebars
+++ b/assets/scripts/templates/book-listing.handlebars
@@ -12,8 +12,8 @@
     {{else}}
       No description.
     {{/if}}
-    <button class='test-button' type="button" name="button">TEST BUTTON</button>
-    <button class='delete-book' type="button" name="button">Delete Book {{book.id}}
+    <button class='delete-book' data={{book.id}}>
+      Delete Book {{book.id}}
     </button>
   </div>
 {{/each}}
