Left off -id from my new DOM attr.

--- a/assets/scripts/templates/book-listing.handlebars
+++ b/assets/scripts/templates/book-listing.handlebars
@@ -12,7 +12,7 @@
     {{else}}
       No description.
     {{/if}}
-    <button class='delete-book' data={{book.id}}>
+    <button class='delete-book' data-id={{book.id}}>
       Delete Book {{book.id}}
     </button>
   </div>
